--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 mkdocs==1.1.2
--e ../../rnorth/mkdocs-codeinclude-plugin
-mkdocs-material==6.1.0
+mkdocs-codeinclude-plugin==0.2.0
 mkdocs-markdownextradata-plugin==0.1.7
+mkdocs-material==6.1.4
